syntax = "proto3";

package ent;

import "google/protobuf/struct.proto";

// Common Types

// Zookie represents an opaque, encoded revision marker for an operation
message Zookie {
  string value = 1;  // Base64-encoded revision marker
}

// Represents consistency requirements for read operations
message ConsistencyRequirement {
  oneof requirement {
    // Full consistency requires synchronous replication
    bool full_consistency = 1;

    // Require staleness no greater than specified zookie
    Zookie at_least_as_fresh = 2;  

    // Read exactly at specified zookie revision
    Zookie exactly_at = 3;

    // Optimize for lowest latency, allowing for staleness
    bool minimize_latency = 4;  
  }
}

// Core object type used across services
message Edge {
  int64 id = 1;                              // Unique identifier for the edge
  int64 from_id = 2;                         // ID of the source object
  string from_type = 3;                       // Type of the source object
  int64 to_id = 4;                           // ID of the target object
  string to_type = 5;                         // Type of the target object
  string relation = 6;                        // Type of the relationship
  google.protobuf.Struct metadata = 7;        // Additional metadata for the edge
  string revision = 8;                        // Revision identifier for MVCC
}

// Core object type used across services
message Object {
  int64 id = 1;                        // Unique identifier for the object
  string type = 2;                     // Object type/schema name
  google.protobuf.Struct metadata = 3; // Object properties and data
}

// Graph Service - Handles operations on objects and edges

service GraphService {
  // Retrieve a single object by ID
  rpc GetObject(GetObjectRequest) returns (GetObjectResponse);

  // Get a single edge (relationship) from an object
  rpc GetEdge(GetEdgeRequest) returns (GetEdgeResponse);

  // Get multiple edges (relationships) from an object
  rpc GetEdges(GetEdgesRequest) returns (GetEdgesResponse);

  // Create a new object
  rpc CreateObject(CreateObjectRequest) returns (CreateObjectResponse);

  // Create a new edge
  rpc CreateEdge(CreateEdgeRequest) returns (CreateEdgeResponse);

  // Update an existing object
  rpc UpdateObject(UpdateObjectRequest) returns (UpdateObjectResponse);

  // Update an existing edge
  rpc UpdateEdge(UpdateEdgeRequest) returns (UpdateEdgeResponse);
}

message GetObjectRequest {
  int64 object_id = 1;                       // ID of object to retrieve
  ConsistencyRequirement consistency = 3;     // Read consistency requirements
}

message GetObjectResponse {
  Object object = 1;                          // Retrieved object
}

message GetEdgeRequest {
  int64 object_id = 1;                       // Source object ID
  string edge_type = 3;                      // Type of edge to retrieve
  ConsistencyRequirement consistency = 4;     // Read consistency requirements
}

message GetEdgeResponse {
  Edge edge = 1;                              // The edge relationship
  Object object = 2;                          // Target object
}

message GetEdgesRequest {
  int64 object_id = 1;                       // Source object ID
  string edge_type = 3;                      // Type of edges to retrieve
  ConsistencyRequirement consistency = 4;     // Read consistency requirements
}

message GetEdgesResponse {
  repeated Object objects = 1;                // Target objects
}

message CreateObjectRequest {
  string type = 1;                           // Type of object to create
  google.protobuf.Struct metadata = 2;       // Object properties and data
}

message CreateObjectResponse {
  Object object = 1;                         // Created object
  Zookie revision = 2;                       // Revision at which object was created
}

message CreateEdgeRequest {
  int64 from_id = 1;                   // Unique identifier for the origin object
  string from_type = 2;                // Type of the origin object
  int64 to_id = 3;                     // Unique identifier for the destination object
  string to_type = 4;                  // Type of the destination object
  string relation = 5;                 // relation name
  google.protobuf.Struct metadata = 6; // Edge properties and data
}

message CreateEdgeResponse {
  Edge edge = 1;                            // Created edge
  Zookie revision = 2;                      // Revision at which edge was created
}

message UpdateObjectRequest {
  int64 object_id = 1;                 // ID of object to update
  google.protobuf.Struct metadata = 2; // Updated object properties and data
}

message UpdateObjectResponse {
  Object object = 1;                   // Updated object
  Zookie revision = 2;                 // Revision marker for this operation
}

message UpdateEdgeRequest {
  int64 edge_id = 1;                   // ID of edge to update
  google.protobuf.Struct metadata = 2; // Updated edge properties and data
}

message UpdateEdgeResponse {
  Edge edge = 1;                       // Updated edge
  Zookie revision = 2;                 // Revision marker for this operation
}

// Schema Service - Handles schema definitions and evolution
service SchemaService {
  // Create or update a schema definition
  rpc CreateSchema(CreateSchemaRequest) returns (CreateSchemaResponse);
}

message CreateSchemaRequest {
  string type_name = 1;                       // Type name for the schema
  string schema = 2;                          // JSON Schema definition
  string description = 3;                     // Optional schema description
}

message CreateSchemaResponse {
  int64 schema_id = 1;                        // Unique identifier for created schema
}
